--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
-  text-align: center;
+  text-align: left;
+  margin: 2em;
 }
 
 .App-logo {
@@ -35,4 +36,119 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.box {
+  border: 1px solid black;
+  margin: 1em 0;
+  padding: 0.5em;
+}
+
+.IdCard {
+  display: flex;
+  align-items: flex-start;
+}
+
+.IdCard img {
+  margin-right: 5px;
+  width: 10em;
+}
+
+.IdCard-info {
+  margin-top: 0.1em;
+}
+
+.IdCard-info p {
+  text-align: left;
+  line-height: 0.3em;
+  margin-top: 0.2em;
+}
+
+.Random,
+.Greetings {
+  font-size: 1em;
+  line-height: 0.2em;
+  padding: 0 0.5em;
+  text-align: left;
+}
+
+.BoxColor {
+  color: white;
+  text-align: center;
+}
+
+.CreditCardRow {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+}
+
+.CreditCard {
+  border-radius: 1em;
+  display: flex;
+  flex-direction: column;
+  width: 400px;
+  margin-right: 3em;
+}
+
+.CreditCard img {
+  height: 1.5em;
+}
+
+.CredidCardType {
+  display: flex;
+  flex-direction: row;
+  align-self: flex-end;
+  margin: 0.8em;
+}
+
+.InfoLine {
+  display: flex;
+  flex-direction: row;
+}
+
+.Info {
+  margin: 1em;
+}
+
+.Info p {
+  margin: 0 1em;
+  padding: 0;
+  line-height: 1.2em;
+}
+
+.Number {
+  font-size: 2em;
+  justify-content: center;
+  align-self: center;
+}
+
+.Rating {
+  font-size: 2em;
+  line-height: 1em;
+}
+
+.DriverCard {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #425cbb;
+  border-radius: 0.3em;
+  color: white;
+  margin-bottom: 2em;
+  padding: 1em;
+}
+
+.DriverCard img {
+  height: 8em;
+  width: 8em;
+  object-fit: cover;
+  border-radius: 100px;
+}
+
+.DriversInfo {
+  font-size: 1.2em;
+  margin-left: 1em;
+  font-weight: bold;
 }
