done up to iteration 11

--- a/src/App.css
+++ b/src/App.css
@@ -152,3 +152,20 @@
   margin-left: 1em;
   font-weight: bold;
 }
+
+.LikeButtonRow {
+  display: flex;
+  flex-direction: row;
+}
+
+.LikeButton button {
+  margin-right: 1em;
+  font-size: 1.2em;
+}
+
+.Dice,
+.ClickablePicture {
+  height: 10em;
+  width: 10em;
+  cursor: pointer;
+}
